--- a/Bio.html
+++ b/Bio.html
@@ -1,3 +1,4 @@
+<!--bio-->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -29,8 +30,7 @@
 				</li>
 			</ul>
 		</nav>
-        <p>
-			Welcome! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization. 
+        <p>TEST TEST TEST Bio here -- I am Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization. 
 			Ever since I was young, I've been interested in geography as a general discipline. 
 			My AP Human Geography class in high school was an extremely formative time, paving the way for my college career and professional path.
 			It was there that I really got invested in geography, and learned about GIS, which thus eventually led to my time at the UW.
@@ -40,11 +40,7 @@
 			I strive to always be an effective creator, an effective analyzer, so that the world may have a brighter future.
 			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
 		</p>
-		<!--<div class="col-md-12 col-xs-12"><img src="assets/Philip_Master_Resume.png" width=100% height="350px"></div>-->
-			RESUME TEXT HERE?
-			<!--My full resume can be viewed <a href="assets/Philip_Master_Resume.pdf">here</a>.-->
-		</p>
-		<!--<div class="container-fluid">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="75%" height="350px"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="75%" height="350px"></div>
@@ -72,8 +68,9 @@
 						It depicts the ideal climbing route along the South Col route, from base camp to the summit, detailing important points along the way, such as camp locations and terrain features.
 						This map is intended to be both educational to those who wish to learn more about climbing the tallest mountain in the world, as well as inform and assist those preparing for the ascent.
 						Interactive features to assist these goals include pan and zoom functions, elevation isolines, route animation, current weather conditions, and several other features.						
-					</div>	
-			 </div>-->
+                        TESTING TESTING TESTING
+                    </div>	
+			 </div>
 		</div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
